@@ -31,6 +31,8 @@ Revision history for Perl extension RPi::WiringPi.
           testing environment variable changes (work on #159)
         - added rpi_register and rpi_register_pins attributes to allow bypassing
           object and pin registration in meta data (closes #162)
+        - added meta_erase() in Meta to allow for complete removal of all shared
+          memory data
 
 2.3633_02 2019-09-21
         - TRIAL RELEASE: may not install properly, and there's a potential for
